--- a/mod/area/gabel_berthas.git.yml
+++ b/mod/area/gabel_berthas.git.yml
@@ -205,6 +205,7 @@ Creature List:
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
       - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
+      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
     SoundSetFile: {type: :word, value: 136}
     SpecAbilityList: 
       type: :list
@@ -214,14 +215,14 @@ Creature List:
     Str: {type: :byte, value: 10}
     Subrace: {type: :cexostr, value: ""}
     Tag: {type: :cexostr, value: gabel_backen}
-    Tail: {type: :byte, value: 0}
+    Tail_New: {type: :dword, value: 0}
     TemplateList: 
       type: :list
       value: []
 
     TemplateResRef: {type: :resref, value: gabel_km_backen}
     WalkRate: {type: :int, value: 7}
-    Wings: {type: :byte, value: 0}
+    Wings_New: {type: :dword, value: 0}
     Wis: {type: :byte, value: 10}
     XOrientation: {type: :float, value: -0.3137}
     XPosition: {type: :float, value: 14.1439}
@@ -239,7 +240,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 15}
@@ -251,13 +252,13 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: gabel_sued_to_bertha}
+    LinkedTo: {type: :cexostr, value: gabel_s_2_gabel_bertha}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
@@ -508,7 +509,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 351}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -571,7 +572,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 107}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
