--- a/mod/itp/itempalcus.itp.yml
+++ b/mod/itp/itempalcus.itp.yml
@@ -5875,6 +5875,38 @@ MAIN:
             RESREF: {type: :resref, value: gemdust057}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, blau"}
+            RESREF: {type: :resref, value: faeriegem1}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, cyan"}
+            RESREF: {type: :resref, value: faeriegem7}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, gelb"}
+            RESREF: {type: :resref, value: faeriegem3}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, gruen"}
+            RESREF: {type: :resref, value: faeriegem0}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, orange"}
+            RESREF: {type: :resref, value: faeriegem6}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, pink"}
+            RESREF: {type: :resref, value: faeriegem4}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, rot"}
+            RESREF: {type: :resref, value: faeriegem2}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            NAME: {type: :cexostr, value: "Feenstein, silber"}
+            RESREF: {type: :resref, value: faeriegem5}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
             NAME: {type: :cexostr, value: "Rohedelstein: Achat, Gr\xFCner"}
             RESREF: {type: :resref, value: gemraw001}
           - !nwn-lib.elv.es,2008-12/struct 
