NWNCQ City Ext Retexture
http://nwvault.ign.com/View.php?view=Hakpaks.Detail&id=7848

closes #1

--- a/mod/mod/module.ifo.yml
+++ b/mod/mod/module.ifo.yml
@@ -60,6 +60,7 @@ Mod_HakList:
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_portraits}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_2da}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_icon}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_tcn01}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_ttr01}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_ttf01}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 8, Mod_Hak: {type: :cexostr, value: silm_tdm01}}
