--- a/mod/uti/elf_for.uti.yml
+++ b/mod/uti/elf_for.uti.yml
@@ -5,7 +5,7 @@ AddCost: {type: :dword, value: 0}
 BaseItem: {type: :int, value: 73}
 Charges: {type: :byte, value: 0}
 Comment: {type: :cexostr, value: ""}
-Cost: {type: :dword, value: 5760}
+Cost: {type: :dword, value: 0}
 Cursed: {type: :byte, value: 0}
 DescIdentified: 
   type: :cexolocstr
@@ -25,34 +25,8 @@ PaletteID: {type: :byte, value: 4}
 Plot: {type: :byte, value: 0}
 PropertiesList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 1}
-    CostValue: {type: :word, value: 2}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 0}
-    Subtype: {type: :word, value: 0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 21}
-    CostValue: {type: :word, value: 2}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 27}
-    Subtype: {type: :word, value: 5}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 0
-    ChanceAppear: {type: :byte, value: 100}
-    CostTable: {type: :byte, value: 21}
-    CostValue: {type: :word, value: 2}
-    Param1: {type: :byte, value: 255}
-    Param1Value: {type: :byte, value: 0}
-    PropertyName: {type: :word, value: 27}
-    Subtype: {type: :word, value: 3}
+  value: []
+
 StackSize: {type: :word, value: 1}
 Stolen: {type: :byte, value: 0}
 Tag: {type: :cexostr, value: ELF_FOR}
