--- a/mod/area/gabel_yallana.are.yml
+++ b/mod/area/gabel_yallana.are.yml
@@ -12,7 +12,7 @@ Expansion_List:
   value: []
 
 Flags: {type: :dword, value: 1}
-FogClipDist: {type: :float, value: 45.0}
+FogClipDist: {type: :float, value: 200.0}
 Height: {type: :int, value: 10}
 ID: {type: :int, value: -1}
 IsNight: {type: :byte, value: 0}
@@ -20,10 +20,10 @@ LightingScheme: {type: :byte, value: 0}
 LoadScreenID: {type: :word, value: 0}
 ModListenCheck: {type: :int, value: 0}
 ModSpotCheck: {type: :int, value: 0}
-MoonAmbientColor: {type: :dword, value: 8388608}
-MoonDiffuseColor: {type: :dword, value: 8404992}
+MoonAmbientColor: {type: :dword, value: 0}
+MoonDiffuseColor: {type: :dword, value: 13132900}
 MoonFogAmount: {type: :byte, value: 0}
-MoonFogColor: {type: :dword, value: 8388608}
+MoonFogColor: {type: :dword, value: 6566450}
 MoonShadows: {type: :byte, value: 1}
 Name: 
   type: :cexolocstr
@@ -36,10 +36,10 @@ OnHeartbeat: {type: :resref, value: _area_hb}
 OnUserDefined: {type: :resref, value: _area_udef}
 PlayerVsPlayer: {type: :byte, value: 3}
 ResRef: {type: :resref, value: gabel_yallana}
-ShadowOpacity: {type: :byte, value: 50}
+ShadowOpacity: {type: :byte, value: 25}
 SkyBox: {type: :byte, value: 0}
-SunAmbientColor: {type: :dword, value: 9351423}
-SunDiffuseColor: {type: :dword, value: 16512}
+SunAmbientColor: {type: :dword, value: 13037311}
+SunDiffuseColor: {type: :dword, value: 14548991}
 SunFogAmount: {type: :byte, value: 0}
 SunFogColor: {type: :dword, value: 16777215}
 SunShadows: {type: :byte, value: 1}
